<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="uz.gita.bank.presentation.ui.screens.VerificationScreen">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:background="?selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_vector"/>

    <TextView
        android:id="@+id/verification_text"
        android:layout_width="195dp"
        android:layout_height="24dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/sf_pro_display"
        android:gravity="center"
        android:text="@string/verification"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code_sent_to"
        app:layout_constraintTop_toBottomOf="@id/verification_text"
        android:layout_marginTop="64dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/sf_pro_display"
        android:textSize="14sp"
        android:textColor="#80000000"
        />
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_998931433836"
        app:layout_constraintTop_toBottomOf="@id/text1"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/sf_pro_display"
        android:textSize="14sp"
        android:textColor="#80000000"
        />

    <in.aabhasjindal.otptextview.OtpTextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text2"
        android:id="@+id/otp_view"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:height="48dp"
        app:otp_box_background_active="@drawable/bg_active"
        app:otp_box_background_inactive="@drawable/bg_inactive"
        app:otp_box_background_error="@drawable/bg_error"
        app:width="40dp"
        app:bar_enabled="true"
        app:bar_height="0dp"
        app:length="6"
        tools:otp="1234"
        app:otp_text_size="24dp" />
    <TextView
        android:id="@+id/time"
        app:layout_constraintTop_toBottomOf="@id/otp_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:text="@string/request_in_00_55"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/button_bg"
        android:text="@string/verify"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="14dp"
        android:enabled="false"
        android:fontFamily="@font/sf_pro_display"
        android:textColor="@color/color_un_enable"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>