<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uz.gita.bank.presentation.ui.screens.ChangePasswordScreen">
    <TextView
        android:id="@+id/sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro_display"
        android:textStyle="bold"
        android:text="@string/change_password"/>

    <TextView
        android:id="@+id/password1_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign"
        android:layout_marginTop="64dp"
        android:layout_marginStart="24dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro_display"
        android:text="@string/new_password"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password1_text"
        android:layout_marginTop="8dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeWidth="0dp"
        android:layout_marginHorizontal="16dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        >
        <EditText
            android:id="@+id/edit_password1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1"
            android:password="true"
            android:background="@drawable/rectangle_4"
            android:paddingStart="16dp"
            android:fontFamily="@font/sf_pro_display"
            android:textColor="@color/input_text_color"
            android:textStyle="bold"
            tools:ignore="Deprecated,RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/password2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password1"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/sf_pro_display"
        android:text="@string/change_password"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password2_text"
        android:layout_marginTop="8dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeWidth="0dp"
        android:layout_marginHorizontal="16dp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:maxLines="1"
            android:password="true"
            android:background="@drawable/rectangle_4"
            android:paddingStart="16dp"
            android:fontFamily="@font/sf_pro_display"
            android:textColor="@color/input_text_color"
            android:textStyle="bold"
            tools:ignore="Deprecated,RtlSymmetry" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/button_bg"
        android:text="@string/save_password"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="14dp"
        android:fontFamily="@font/sf_pro_display"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>