<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="uz.gita.bank.presentation.ui.screens.RegisterScreen">
<TextView
    android:id="@+id/sign"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="16dp"
    android:textSize="20sp"
    android:textColor="@color/black"
    android:fontFamily="@font/sf_pro_display"
    android:textStyle="bold"
    android:text="@string/sign_up"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_24"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/fist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="64dp"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/fist_name"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_fist_name"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rectangle_4"
                android:fontFamily="@font/sf_pro_display"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:textColor="@color/input_text_color"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fist_name"
                tools:ignore="RtlSymmetry"
                tools:text="Temurbek" />
            <TextView
                android:id="@+id/wrong_fist_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/edit_fist_name"
                app:layout_constraintTop_toBottomOf="@id/edit_fist_name"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"
                tools:text="wrong password"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/last_name"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wrong_fist_name_text" />

            <EditText
                android:id="@+id/edit_last_name"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rectangle_4"
                android:fontFamily="@font/sf_pro_display"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:textColor="@color/input_text_color"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/last_name"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/wrong_last_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/edit_last_name"
                app:layout_constraintTop_toBottomOf="@id/edit_last_name"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"
                tools:text="wrong password"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wrong_last_name_text" />

            <EditText
                android:id="@+id/edit_phone_number"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rectangle_4"
                android:fontFamily="@font/sf_pro_display"
                android:inputType="phone"
                android:maxLength="17"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:text="+998"
                android:textColor="@color/input_text_color"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_number"
                tools:ignore="RtlSymmetry" />
            <TextView
                android:id="@+id/wrong_phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/edit_phone_number"
                app:layout_constraintTop_toBottomOf="@id/edit_phone_number"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"
                tools:text="wrong password"
                android:visibility="gone"
                />


            <TextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/sf_pro_display"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wrong_phone_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <EditText
                    android:id="@+id/editor1_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/rectangle_4"
                    android:fontFamily="@font/sf_pro_display"
                    android:inputType="text"
                    android:lineHeight="0dp"
                    android:maxLines="1"
                    android:paddingStart="16dp"
                    android:textColor="@color/input_text_color"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/wrong_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/edit_password"
                app:layout_constraintTop_toBottomOf="@id/edit_password"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"
                tools:text="wrong password"
                android:visibility="gone"
                />

            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
    <TextView
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/sf_pro_display"
        android:gravity="center"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/color_un_enable"
        android:textSize="14sp"
        android:enabled="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>